--- a/build.xml
+++ b/build.xml
@@ -26,8 +26,9 @@
         <sequential>
             <java classname="org.jsl.tests.@{name}.Main" fork="true">
                 <classpath>
-                    <pathelement location="out/${ant.project.name}.jar"/>
-                    <pathelement location="out/production/tests"/>
+                    <pathelement location="${OUT_DIR}/core"/>
+                    <pathelement location="${OUT_DIR}/tests"/>
+                    <pathelement location="tests/netty-all-4.0.0.CR6.jar"/>
                 </classpath>
             </java>
         </sequential>
@@ -53,20 +54,29 @@
         </jar>
     </target>
 
-    <target name="compile_tests" depends="dist">
+    <target name="compile_tests" depends="compile">
         <mkdir dir="${OUT_DIR}/tests"/>
         <javac srcdir="tests/src" destdir="${OUT_DIR}/tests" includeantruntime="false">
             <classpath>
-                <pathelement location="out/${ant.project.name}.jar"/>
+                <pathelement location="${OUT_DIR}/core"/>
+                <pathelement location="tests/netty-all-4.0.0.CR6.jar"/>
             </classpath>
         </javac>
     </target>
 
-    <target name="run_tests" depends="test.output_queue">
+    <target name="run_tests" depends="test.output_queue ">
     </target>
 
     <target name="test.output_queue" depends="compile_tests">
         <run-test name="output_queue"/>
+    </target>
+
+    <target name="test.acceptor_perf" depends="compile_tests">
+        <run-test name="acceptor_perf"/>
+    </target>
+
+    <target name="test.netty_acceptor_perf" depends="compile_tests">
+        <run-test name="netty_acceptor_perf"/>
     </target>
 
 </project>
