--- a/build.xml
+++ b/build.xml
@@ -71,6 +71,10 @@
         <run-test name="output_queue"/>
     </target>
 
+    <target name="test.sched_latency" depends="compile_tests">
+        <run-test name="sched_latency"/>
+    </target>
+
     <target name="test.acceptor_perf" depends="compile_tests">
         <run-test name="acceptor_perf"/>
     </target>
