Some changes in logging.

--- a/tests/logging.config
+++ b/tests/logging.config
@@ -1,8 +1,13 @@
-handlers = java.util.logging.FileHandler
+#handlers = java.util.logging.FileHandler
+handlers = java.util.logging.ConsoleHandler
 
 java.util.logging.FileHandler.pattern   = tests/log%u.log
 java.util.logging.FileHandler.formatter = org.jsl.collider.LogFormatter
 
-org.jsl.collider.Collider.level     = ALL
-org.jsl.collider.AcceptorImpl.level = ALL
-org.jsl.collider.SessionImpl.level  = ALL
+java.util.logging.ConsoleHandler.formatter = org.jsl.collider.LogFormatter
+java.util.logging.ConsoleHandler.level = ALL
+
+org.jsl.collider.Collider.level   = FINE
+org.jsl.collider.Acceptor.level   = FINE
+org.jsl.collider.Session.level    = FINE
+org.jsl.collider.InputQueue.level = FINE
