--- a/tests/logging.config
+++ b/tests/logging.config
@@ -1,5 +1,6 @@
+#-Djava.util.logging.config.file=tests\logging.config
 #handlers = java.util.logging.FileHandler
-handlers = java.util.logging.ConsoleHandler
+#handlers = java.util.logging.ConsoleHandler
 
 java.util.logging.FileHandler.pattern   = tests/log%u.log
 java.util.logging.FileHandler.formatter = org.jsl.collider.LogFormatter
@@ -10,4 +11,3 @@ java.util.logging.ConsoleHandler.level = ALL
 org.jsl.collider.Collider.level   = FINE
 org.jsl.collider.Acceptor.level   = FINE
 org.jsl.collider.Session.level    = FINE
-org.jsl.collider.InputQueue.level = FINE
