--- a/build.xml
+++ b/build.xml
@@ -64,11 +64,8 @@
         </javac>
     </target>
 
-    <target name="run_tests" depends="test.output_queue, test.sched_latency, test.session_latency">
-    </target>
-
-    <target name="test.output_queue" depends="compile_tests">
-        <run-test name="output_queue"/>
+    <target name="test.binary_queue" depends="compile_tests">
+        <run-test name="binary_queue"/>
     </target>
 
     <target name="test.sched_latency" depends="compile_tests">
