Fixed to work properly on Unix.

--- a/tests/logging.config
+++ b/tests/logging.config
@@ -1,4 +1,4 @@
-#-Djava.util.logging.config.file=tests\logging.config
+#-Djava.util.logging.config.file=tests/logging.config
 #handlers = java.util.logging.FileHandler
 #handlers = java.util.logging.ConsoleHandler
 
