Added Connector support.

--- a/tests/logging.config
+++ b/tests/logging.config
@@ -8,6 +8,7 @@ java.util.logging.FileHandler.formatter = org.jsl.collider.LogFormatter
 java.util.logging.ConsoleHandler.formatter = org.jsl.collider.LogFormatter
 java.util.logging.ConsoleHandler.level = ALL
 
-org.jsl.collider.Collider.level = FINE
-org.jsl.collider.Acceptor.level = FINE
-org.jsl.collider.Session.level  = FINE
+org.jsl.collider.Collider.level  = FINE
+org.jsl.collider.Acceptor.level  = FINE
+org.jsl.collider.Connector.level = FINE
+org.jsl.collider.Session.level   = FINE
