Added datagram logger.

--- a/tests/logging.config
+++ b/tests/logging.config
@@ -12,3 +12,4 @@ org.jsl.collider.Collider.level  = FINE
 org.jsl.collider.Acceptor.level  = FINE
 org.jsl.collider.Connector.level = FINE
 org.jsl.collider.Session.level   = FINE
+org.jsl.collider.Datagram.level  = FINE
