--- a/build.xml
+++ b/build.xml
@@ -86,6 +86,10 @@
         <run-test name="sched_latency"/>
     </target>
 
+    <target name="test.byte_buffer_pool" depends="compile_tests">
+        <run-test name="byte_buffer_pool"/>
+    </target>
+
     <target name="test.thread_pool" depends="compile_tests">
         <run-test name="thread_pool"/>
     </target>
@@ -154,6 +158,7 @@
             depends="test.buffer_overlap_copy,
                      test.message_queue,
                      test.sched_latency,
+                     test.byte_buffer_pool,
                      test.thread_pool,
                      test.thread_pool_throughput,
                      test.timer_queue,
