--- a/build.xml
+++ b/build.xml
@@ -20,8 +20,17 @@
 <project name="js-collider">
 
     <xmlproperty file="pom.xml" prefix="pom"/>
-    <property name="VERSION" value="${pom.project.version}"/>
-    <property name="OUT_DIR" location="target"/>
+    <property name="version" value="${pom.project.version}"/>
+    <property name="src" location="src"/>
+    <property name="build" location="build"/>
+    <property name="dist" location="dist"/>
+
+    <property name="groupId" value="org.jsl"/>
+    <property name="artifactId" value="js-collider"/>
+
+    <property name="jar" value="${dist}/lib/${artifactId}-${version}.jar"/>
+    <property name="javadoc-jar" value="${dist}/lib/${artifactId}-${version}-javadoc.jar"/>
+    <property name="sources-jar" value="${dist}/lib/${artifactId}-${version}-sources.jar"/>
 
     <macrodef name="run-test">
         <sequential>
@@ -33,8 +42,8 @@
             </script>
             <java classname="org.jsl.tests.${testName}.Main" fork="true">
                 <classpath>
-                    <pathelement location="${OUT_DIR}/classes"/>
-                    <pathelement location="${OUT_DIR}/tests"/>
+                    <pathelement location="${build}/classes"/>
+                    <pathelement location="${build}/tests"/>
                 </classpath>
                 <jvmarg value="-ea"/>
                 <jvmarg value="-server"/>
@@ -43,43 +52,55 @@
         </sequential>
     </macrodef>
 
+    <target name="init">
+        <mkdir dir="${build}/classes"/>
+        <mkdir dir="${dist}/lib"/>
+    </target>
+
     <target name="clean">
-        <delete dir="${OUT_DIR}"/>
+        <delete dir="${build}"/>
+        <delete dir="${dist}"/>
     </target>
 
-    <target name="compile">
-        <mkdir dir="${OUT_DIR}/classes"/>
-        <javac srcdir="src/main/java" destdir="${OUT_DIR}/classes" includeantruntime="false" debug="true"/>
+    <target name="compile" depends="init">
+        <javac srcdir="src/main/java" destdir="${build}/classes" includeantruntime="false" debug="true"/>
     </target>
 
-    <target name="package" depends="compile">
-        <jar jarfile="${OUT_DIR}/${ant.project.name}-${VERSION}.jar" basedir="${OUT_DIR}/classes">
+    <target name="jar" depends="compile">
+        <jar jarfile="${jar}" basedir="${build}/classes">
             <manifest>
                 <attribute name="Implementation-Title" value="${ant.project.name}"/>
                 <attribute name="Implementation-Vendor" value="org.jsl"/>
-                <attribute name="Implementation-Version" value="${VERSION}"/>
+                <attribute name="Implementation-Version" value="${version}"/>
                 <attribute name="Sealed" value="true"/>
             </manifest>
         </jar>
-        <jar jarfile="${OUT_DIR}/${ant.project.name}-${VERSION}-sources.jar" basedir="src/main/java">
+    </target>
+
+    <target name="dist" depends="jar">
+        <javadoc sourcepath="${src}/main/java" destdir="${dist}/javadoc"/>
+        <jar jarfile="${javadoc-jar}">
+            <fileset dir="${dist}/javadoc"/>
             <manifest>
                 <attribute name="Implementation-Title" value="${ant.project.name}"/>
                 <attribute name="Implementation-Vendor" value="org.jsl"/>
-                <attribute name="Implementation-Version" value="${VERSION}"/>
+                <attribute name="Implementation-Version" value="${version}"/>
                 <attribute name="Sealed" value="true"/>
             </manifest>
         </jar>
-        <copy file="pom.xml" tofile="${OUT_DIR}/${ant.project.name}-${VERSION}.pom"/>
-        <!--exec command="mvn">
-            <arg value="javadoc:jar"/>
-        </exec-->
+
+        <jar jarfile="${sources-jar}">
+            <fileset dir="${src}"/>
+        </jar>
+
+        <copy file="pom.xml" tofile="${dist}/lib/${ant.project.name}-${version}.pom"/>
     </target>
 
     <target name="compile_tests" depends="compile">
-        <mkdir dir="${OUT_DIR}/tests"/>
-        <javac srcdir="tests/src" destdir="${OUT_DIR}/tests" includeantruntime="false" debug="true">
+        <mkdir dir="${build}/tests"/>
+        <javac srcdir="tests/src" destdir="${build}/tests" includeantruntime="false" debug="true">
             <classpath>
-                <pathelement location="${OUT_DIR}/classes"/>
+                <pathelement location="${build}/classes"/>
             </classpath>
         </javac>
     </target>
